cambios de etiqueta meta, keyswords, links a paginas externas

--- a/veterinaria_patitas/veterinaria_patitas/productos.html
+++ b/veterinaria_patitas/veterinaria_patitas/productos.html
@@ -1,95 +1,116 @@
 <html lang="ES">
-  <head>
-    <meta charset="utf-8">
-    <title >Veterinaria Patitas -Productos</title>
-	<link href= "css/productos.css" rel="stylesheet" type="text/css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="img/favicon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-  </head>
-  <body> 
-  <header> 
-    <nav class="nav-hero">
-        <div class="container nav-container">
-            <div class="logo">
-                <br><img id=logo src="img/logo.jpeg" alt="logo" width="150" height="150" >
-            </div>
-            <div class="links">
-                <a href="index.html" class="link">Inicio</a>
-                <a href="productos.html" class="link">Productos</a>
-                <a href="contacto.html" class="link">Contacto</a>
-                <a href="registro.html" class="link">Registrarse</a>
-                <a href="#" class="link">Turnero</a>
 
-            </div>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Veterinaria Patitas - Productos</title>
+
+  <link href="css/productos.css" rel="stylesheet" type="text/css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" href="img/favicon.png">
+  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+  <!--nuevas etiquetas-->
+  <meta name="description" content="Web para mostrar los productos de una veterinaria" />
+  <meta name="robots" content="index" />
+  <meta name="googlebot" content="index" />
+  <meta name="keywords"
+    content="artículos, venta, store, petshop, tienda, servicios veterinarios, veterinaria, animales, perros, servicios, mascotas" />
+  <meta name="author" content="Priscilla Arianna MINGORANCE, Romina Gisela MOLINA, Lourdes MONTI LELOUTRE" />
+  <meta name="copyright" content="Priscilla Arianna MINGORANCE, Romina Gisela MOLINA, Lourdes MONTI LELOUTRE" />
+
+
+</head>
+
+<body>
+  <header>
+    <nav class="nav-hero">
+      <div class="container nav-container">
+        <div class="logo">
+          <br><img id=logo src="img/logo.jpeg" alt="logo" width="150" height="150">
+        </div>
+        <div class="links">
+          <a href="index.html" class="link">Inicio</a>
+          <a href="productos.html" class="link">Productos</a>
+          <a href="contacto.html" class="link">Contacto</a>
+          <a href="registro.html" class="link">Registrarse</a>
+          <a href="#" class="link">Turnero</a>
 
         </div>
+
+      </div>
     </nav>
     <br>
-  <h1 id=titulo>Productos</h1>
-  </header> 
-  
- <section id=seccion>
-     
-  <article>
-    <figure>
-      <img src="img/collargoma.jpg" alt="collargoma" width="220" height="220" >
-      <figcaption>Collares de goma</figcaption>
-      <figcaption>$5000</figcaption>
-    </figure>   
+    <h1 id=titulo>Productos</h1>
+  </header>
+
+  <section id=seccion>
+
+    <article>
+      <figure>
+        <img src="img/collargoma.jpg" alt="collargoma" width="220" height="220">
+        <figcaption>Collares de goma</figcaption>
+        <figcaption>$5000</figcaption>
+      </figure>
 
       <figure>
-          <img src="img/bolsaviaje.jpg" alt="bolsaviaje" width="220" height="220" >
-          <figcaption>Bolsas de Viaje</figcaption>
-          <figcaption>$5000</figcaption>
-        </figure>
-    
-    <figure>
-          <img src="img/camas.jpg" alt="camas" width="220" height="220">
-          <figcaption>Camas</figcaption>
-          <figcaption>$5000</figcaption>
-        </figure>
-    <figure>
-          <img src="img/collares.jpg" alt="collares" width="220" height="220" >
-          <figcaption>Collares de tela</figcaption>
-          <figcaption>$5000</figcaption>
-        </figure>
-    <figure>
-          <img src="img/huesosgalleta.jpg" alt="Hueso" width="220" height="220" >
-          <figcaption>Galletas Hueso</figcaption>
-          <figcaption>$5000</figcaption>
-        </figure>   
-    <figure>
-          <img src="img/HuesoFieltro.jpg" alt="HuesoFieltro" width="220" height="220" >
-          <figcaption>HuesoFieltro</figcaption>
-          <figcaption>$5000</figcaption>
-        </figure>   
+        <img src="img/bolsaviaje.jpg" alt="bolsaviaje" width="220" height="220">
+        <figcaption>Bolsas de Viaje</figcaption>
+        <figcaption>$5000</figcaption>
+      </figure>
 
-      </article>
+      <figure>
+        <img src="img/camas.jpg" alt="camas" width="220" height="220">
+        <figcaption>Camas</figcaption>
+        <figcaption>$5000</figcaption>
+      </figure>
+      <figure>
+        <img src="img/collares.jpg" alt="collares" width="220" height="220">
+        <figcaption>Collares de tela</figcaption>
+        <figcaption>$5000</figcaption>
+      </figure>
+      <figure>
+        <img src="img/huesosgalleta.jpg" alt="Hueso" width="220" height="220">
+        <figcaption>Galletas Hueso</figcaption>
+        <figcaption>$5000</figcaption>
+      </figure>
+      <figure>
+        <img src="img/HuesoFieltro.jpg" alt="HuesoFieltro" width="220" height="220">
+        <figcaption>HuesoFieltro</figcaption>
+        <figcaption>$5000</figcaption>
+      </figure>
+
+    </article>
   </section>
-  
+
   <footer class="footer">
     <div class="contact">
-        <div class="item-contact">
-         <i class='bx bx-copyright contact-icon' ></i>
-         <h3 class="contact-title">VeterinariaPatitas</h3>
-        </div>
-        <div class="item-contact">
-         <i class='bx bxs-phone contact-icon'></i>
-         <h3 class="contact-title">351269584</h3>
-        </div>
-        <div class="item-contact">
-         <i class='bx bx-mail-send contact-icon'></i>
-         <h3 class="contact-title">veterinaria.patitas@gmail.com</h3>
-        </div>
-        <div class="item-contact">
-         <i class='bx bx-map contact-icon' ></i>
-         <h3 class="contact-title">Sucre 275 Córdoba, Argentina</h3>
-        </div>    
+      <div class="item-contact">
+        <i class='bx bx-copyright contact-icon'></i>
+        <h5 class="contact-title"> Copyright © 2021 - </br> Veterinaria Patitas </br> </br> Todos los derechos
+          reservados.</h5>
+
+      </div>
+      <div class="item-contact">
+        <i class='bx bxs-phone contact-icon'></i>
+        <h5 class="contact-title"> <a href="https://wa.me/+5493537687557" target="_blank">3537687557</a></h5>
+      </div>
+      <div class="item-contact">
+        <i class='bx bx-mail-send contact-icon'></i>
+        <h5 class="contact-title"><a
+            href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio">veterinaria.patitas@gmail.com</a>
+        </h5>
+      </div>
+      <div class="item-contact">
+        <i class='bx bx-map contact-icon'></i>
+        <h5 class="contact-title"> <a href="https://goo.gl/maps/Lxz724P9fqSjRZ2WA" target="_blanck">Sucre 275
+            Córdoba, Argentina </a></h5>
+      </div>
     </div>
   </footer>
-  
-  </body>
-  </html>
+
+</body>
+
+</html>
