--- a/veterinaria_patitas/veterinaria_patitas/contacto.html
+++ b/veterinaria_patitas/veterinaria_patitas/contacto.html
@@ -25,6 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/contacto.css" />
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
@@ -39,6 +40,7 @@
                     <a href="productos.html" class="link">Productos</a>
                     <a href="contacto.html" class="link">Contacto</a>
                     <a href="registro.html" class="link">Registrarse</a>
+                    <a href="login.html" class="link">Login</a>
                     <a href="#" class="link">Turnero</a>
 
                 </div>
@@ -65,13 +67,14 @@
                         <option value="Opinion">Opinion</option>
                     </select></div>
                 <div class="input-contenedor"><textarea name="mensaje" rows="8" required placeholder="Mensaje"
-                        style="font-family:Arial, Helvetica, sans-serif"></textarea></div>
+                        style="font-family: 'Shadows Into Light', cursive";></textarea></div>
                 <input type="submit" value="Enviar su mensaje" class="button">
 
 
             </div>
         </form>
     </Section>
+    
     <br>
 
 
@@ -85,17 +88,17 @@
             </div>
             <div class="item-contact">
                 <i class='bx bxs-phone contact-icon'></i>
-                <h5 class="contact-title"> <a href="https://wa.me/+5493537687557" target="_blank">3537687557</a></h5>
+                <h5 class="contact-title"> <a href="https://wa.me/+5493537687557" target="_blank" style="color: #fff;">3537687557</a></h5>
             </div>
             <div class="item-contact">
                 <i class='bx bx-mail-send contact-icon'></i>
                 <h5 class="contact-title"><a
-                        href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio">veterinaria.patitas@gmail.com</a>
+                        href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio" style="color: #fff;">veterinaria.patitas@gmail.com</a>
                 </h5>
             </div>
             <div class="item-contact">
                 <i class='bx bx-map contact-icon'></i>
-                <h5 class="contact-title"> <a href="https://goo.gl/maps/Lxz724P9fqSjRZ2WA" target="_blanck">Sucre 275
+                <h5 class="contact-title"> <a href="https://goo.gl/maps/Lxz724P9fqSjRZ2WA" target="_blanck" style="color: #fff;">Sucre 275
                         Córdoba, Argentina </a></h5>
             </div>
         </div>
