--- a/veterinaria_patitas/veterinaria_patitas/productos.html
+++ b/veterinaria_patitas/veterinaria_patitas/productos.html
@@ -12,6 +12,7 @@
   <link rel="icon" href="img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--nuevas etiquetas-->
   <meta name="description" content="Web para mostrar los productos de una veterinaria" />
   <meta name="robots" content="index" />
@@ -36,6 +37,7 @@
           <a href="productos.html" class="link">Productos</a>
           <a href="contacto.html" class="link">Contacto</a>
           <a href="registro.html" class="link">Registrarse</a>
+          <a href="login.html" class="link">Login</a>
           <a href="#" class="link">Turnero</a>
 
         </div>
@@ -85,8 +87,23 @@
     </article>
   </section>
 
-  <footer class="footer">
+  <br>
+    <footer class="footer">
+      <div class="footer-caption">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html" style="color: #fff;">Inicio</a></li>
+          <li class="breadcrumb-item"><a href="productos.html" style="color: #fff;">Productos</a></li>
+          <li class="breadcrumb-item"><a href="contacto.html" style="color: #fff;">Contacto</a></li>
+          <li class="breadcrumb-item"><a href="registro.html" style="color: #fff;">Registrarse</a></li>
+          <li class="breadcrumb-item"><a href="login.html" style="color: #fff;">Login</a></li>
+          <li class="breadcrumb-item"><a href="#"style="color: #fff;">Turnero</a></li>
+        </ol>
+      </nav>
+      </div>
+
     <div class="contact">
+     
       <div class="item-contact">
         <i class='bx bx-copyright contact-icon'></i>
         <h5 class="contact-title"> Copyright © 2021 - </br> Veterinaria Patitas </br> </br> Todos los derechos
@@ -95,17 +112,17 @@
       </div>
       <div class="item-contact">
         <i class='bx bxs-phone contact-icon'></i>
-        <h5 class="contact-title"> <a href="https://wa.me/+5493537687557" target="_blank">3537687557</a></h5>
+        <h5 class="contact-title"> <a href="https://wa.me/+5493537687557" target="_blank" style="color: #fff;">3537687557</a></h5>
       </div>
       <div class="item-contact">
         <i class='bx bx-mail-send contact-icon'></i>
         <h5 class="contact-title"><a
-            href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio">veterinaria.patitas@gmail.com</a>
+            href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio" style="color: #fff;">veterinaria.patitas@gmail.com</a>
         </h5>
       </div>
       <div class="item-contact">
         <i class='bx bx-map contact-icon'></i>
-        <h5 class="contact-title"> <a href="https://goo.gl/maps/Lxz724P9fqSjRZ2WA" target="_blanck">Sucre 275
+        <h5 class="contact-title"> <a href="https://goo.gl/maps/Lxz724P9fqSjRZ2WA" target="_blanck" style="color: #fff;">Sucre 275
             Córdoba, Argentina </a></h5>
       </div>
     </div>
