Footer para todas las paginas html y modificaciones css

--- a/veterinaria_patitas/veterinaria_patitas/contacto.html
+++ b/veterinaria_patitas/veterinaria_patitas/contacto.html
@@ -79,6 +79,18 @@
 
 
     <footer class="footer">
+        <div class="container footer-caption">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+                  <li class="breadcrumb-item"><a href="productos.html">Productos</a></li>
+                  <li class="breadcrumb-item"><a href="contacto.html">Contacto</a></li>
+                  <li class="breadcrumb-item"><a href="registro.html">Registrarse</a></li>
+                  <li class="breadcrumb-item"><a href="login.html">Login</a></li>
+                  <li class="breadcrumb-item"><a href="#">Turnero</a></li>
+                </ol>
+              </nav>
+            </div>
         <div class="contact">
             <div class="item-contact">
                 <i class='bx bx-copyright contact-icon'></i>
@@ -102,6 +114,7 @@
                         Córdoba, Argentina </a></h5>
             </div>
         </div>
+     
     </footer>
 </body>
 
