pagina turnero, footer, menu footer hover y color, pag. productos

--- a/veterinaria_patitas/veterinaria_patitas/productos.html
+++ b/veterinaria_patitas/veterinaria_patitas/productos.html
@@ -38,7 +38,7 @@
           <a href="contacto.html" class="link">Contacto</a>
           <a href="registro.html" class="link">Registrarse</a>
           <a href="login.html" class="link">Login</a>
-          <a href="#" class="link">Turnero</a>
+          <a href="turnero.html" class="link">Turnero</a>
 
         </div>
 
@@ -52,34 +52,34 @@
 
     <article>
       <figure>
-        <img src="img/collargoma.jpg" alt="collargoma" width="220" height="220">
+        <img src="img/collargoma.jpg" alt="collargoma" >
         <figcaption>Collares de goma</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
 
       <figure>
-        <img src="img/bolsaviaje.jpg" alt="bolsaviaje" width="220" height="220">
+        <img src="img/bolsaviaje.jpg" alt="bolsaviaje" >
         <figcaption>Bolsas de Viaje</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
 
       <figure>
-        <img src="img/camas.jpg" alt="camas" width="220" height="220">
+        <img src="img/camas.jpg" alt="camas" >
         <figcaption>Camas</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
       <figure>
-        <img src="img/collares.jpg" alt="collares" width="220" height="220">
+        <img src="img/collares.jpg" alt="collares" >
         <figcaption>Collares de tela</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
       <figure>
-        <img src="img/huesosgalleta.jpg" alt="Hueso" width="220" height="220">
+        <img src="img/huesosgalleta.jpg" alt="Hueso" >
         <figcaption>Galletas Hueso</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
       <figure>
-        <img src="img/HuesoFieltro.jpg" alt="HuesoFieltro" width="220" height="220">
+        <img src="img/HuesoFieltro.jpg" alt="HuesoFieltro" >
         <figcaption>HuesoFieltro</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
@@ -89,18 +89,18 @@
 
   <br>
     <footer class="footer">
-      <div class="footer-caption">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html" style="color: #fff;">Inicio</a></li>
-          <li class="breadcrumb-item"><a href="productos.html" style="color: #fff;">Productos</a></li>
-          <li class="breadcrumb-item"><a href="contacto.html" style="color: #fff;">Contacto</a></li>
-          <li class="breadcrumb-item"><a href="registro.html" style="color: #fff;">Registrarse</a></li>
-          <li class="breadcrumb-item"><a href="login.html" style="color: #fff;">Login</a></li>
-          <li class="breadcrumb-item"><a href="#"style="color: #fff;">Turnero</a></li>
-        </ol>
-      </nav>
-      </div>
+      <div class="container footer-caption2">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+              <li class="breadcrumb-item"><a href="productos.html">Productos</a></li>
+              <li class="breadcrumb-item"><a href="contacto.html">Contacto</a></li>
+              <li class="breadcrumb-item"><a href="registro.html">Registrarse</a></li>
+              <li class="breadcrumb-item"><a href="login.html">Login</a></li>
+              <li class="breadcrumb-item"><a href="turnero.html">Turnero</a></li>
+            </ol>
+          </nav>
+        </div>
 
     <div class="contact">
      
@@ -112,17 +112,17 @@
       </div>
       <div class="item-contact">
         <i class='bx bxs-phone contact-icon'></i>
-        <h5 class="contact-title"> <a href="https://wa.me/+5493537687557" target="_blank" style="color: #fff;">3537687557</a></h5>
+        <h5 class="contact-title"> <a href="https://wa.me/+5493537687557" target="_blank" >3537687557</a></h5>
       </div>
       <div class="item-contact">
         <i class='bx bx-mail-send contact-icon'></i>
         <h5 class="contact-title"><a
-            href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio" style="color: #fff;">veterinaria.patitas@gmail.com</a>
+            href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio" >veterinaria.patitas@gmail.com</a>
         </h5>
       </div>
       <div class="item-contact">
         <i class='bx bx-map contact-icon'></i>
-        <h5 class="contact-title"> <a href="https://goo.gl/maps/Lxz724P9fqSjRZ2WA" target="_blanck" style="color: #fff;">Sucre 275
+        <h5 class="contact-title"> <a href="https://goo.gl/maps/Lxz724P9fqSjRZ2WA" target="_blanck" >Sucre 275
             Córdoba, Argentina </a></h5>
       </div>
     </div>
