--- a/veterinaria_patitas/veterinaria_patitas/registro.html
+++ b/veterinaria_patitas/veterinaria_patitas/registro.html
@@ -20,7 +20,7 @@
     <meta name="robots" content="index" />
     <meta name="googlebot" content="index" />
     <meta name="keywords"
-        content="registro, sesion, usuario, servicios veterinarios, veterinaria, animales, perros, servicios, mascotas" />
+        content="registro, alta, sesion, usuario, servicios veterinarios, veterinaria, animales, perros, servicios, mascotas" />
     <meta name="author" content="Priscilla Arianna MINGORANCE, Romina Gisela MOLINA, Lourdes MONTI LELOUTRE" />
     <meta name="copyright" content="Priscilla Arianna MINGORANCE, Romina Gisela MOLINA, Lourdes MONTI LELOUTRE" />
 
@@ -41,7 +41,7 @@
                     <a href="contacto.html" class="link">Contacto</a>
                     <a href="registro.html" class="link">Registrarse</a>
                     <a href="login.html" class="link">Login</a>
-                    <a href="#" class="link">Turnero</a>
+                    <a href="turnero.html" class="link">Turnero</a>
 
                 </div>
 
@@ -106,7 +106,7 @@
     </form>
     <br>
     <footer class="footer">
-        <div class="container footer-caption">
+        <div class="container footer-caption2">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
@@ -114,10 +114,10 @@
                   <li class="breadcrumb-item"><a href="contacto.html">Contacto</a></li>
                   <li class="breadcrumb-item"><a href="registro.html">Registrarse</a></li>
                   <li class="breadcrumb-item"><a href="login.html">Login</a></li>
-                  <li class="breadcrumb-item"><a href="#">Turnero</a></li>
+                  <li class="breadcrumb-item"><a href="turnero.html">Turnero</a></li>
                 </ol>
               </nav>
-            </div>
+        </div>
         <div class="contact">
             <div class="item-contact">
                 <i class='bx bx-copyright contact-icon'></i>
@@ -127,17 +127,17 @@
             </div>
             <div class="item-contact">
                 <i class='bx bxs-phone contact-icon'></i>
-                <h5 class="contact-title"> <a href="https://wa.me/+5493537687557" target="_blank" style="color: #fff;">3537687557</a></h5>
+                <h5 class="contact-title"> <a href="https://wa.me/+5493537687557" target="_blank" >3537687557</a></h5>
             </div>
             <div class="item-contact">
                 <i class='bx bx-mail-send contact-icon'></i>
                 <h5 class="contact-title"><a
-                        href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio" style="color: #fff;">veterinaria.patitas@gmail.com</a>
+                        href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio" >veterinaria.patitas@gmail.com</a>
                 </h5>
             </div>
             <div class="item-contact">
                 <i class='bx bx-map contact-icon'></i>
-                <h5 class="contact-title"> <a href="https://goo.gl/maps/Lxz724P9fqSjRZ2WA" target="_blanck" style="color: #fff;">Sucre 275
+                <h5 class="contact-title"> <a href="https://goo.gl/maps/Lxz724P9fqSjRZ2WA" target="_blanck" >Sucre 275
                         Córdoba, Argentina </a></h5>
             </div>
         </div>
