--- a/veterinaria_patitas/veterinaria_patitas/login.html
+++ b/veterinaria_patitas/veterinaria_patitas/login.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/registro.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-    <meta name="description" content="Web para tener relación con los clientes de una veterinaria" />
+    <meta name="description" content="Web para Iniciar Sesion" />
     <meta name="robots" content="index" />
     <meta name="googlebot" content="index" />
     <meta name="keywords"
