--- a/veterinaria_patitas/veterinaria_patitas/turnero.html
+++ b/veterinaria_patitas/veterinaria_patitas/turnero.html
@@ -16,7 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!--nuevas etiquetas-->
-    <meta name="description" content="Web para tener relación con los clientes de una veterinaria" />
+    <meta name="description" content="Web para solicitar una cita con la veterinaria" />
     <meta name="robots" content="index" />
     <meta name="googlebot" content="index" />
     <meta name="keywords"
