--- a/veterinaria_patitas/veterinaria_patitas/index.html
+++ b/veterinaria_patitas/veterinaria_patitas/index.html
@@ -73,7 +73,7 @@
                             <h3 class="card-title">Peluquería<span class="point">.</span></h3>
                             <p class="card-copy">Servicio de peluqueria canina y felina con instrumentos profesionales.
                                 Haz click en el botón para solicitar un turno </p>
-                            <a href="#" class="card-button">Turnos disponibles</a>
+                            <a href="turnero.html" class="card-button">Turnos disponibles</a>
 
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                             <h3 class="card-title">Veterinarios clínicos<span class="point">.</span></h3>
                             <p class="card-copy">Servicio clinico, consultas con especialista e internaciones. Haz click
                                 en el botón para solicitar un turno.</p>
-                            <a href="#" class="card-button">Turnos disponibles</a>
+                            <a href="turnero.html" class="card-button">Turnos disponibles</a>
 
                         </div>
                     </div>
