--- a/veterinaria_patitas/veterinaria_patitas/productos.html
+++ b/veterinaria_patitas/veterinaria_patitas/productos.html
@@ -52,34 +52,34 @@
 
     <article>
       <figure>
-        <img src="img/collargoma.jpg" alt="collargoma" >
+        <img src="img/collargoma.jpg" alt="collargoma" width="220 px" height="220 px" >
         <figcaption>Collares de goma</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
 
       <figure>
-        <img src="img/bolsaviaje.jpg" alt="bolsaviaje" >
+        <img src="img/bolsaviaje.jpg" alt="bolsaviaje" width="220 px" height="220 px" >
         <figcaption>Bolsas de Viaje</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
 
       <figure>
-        <img src="img/camas.jpg" alt="camas" >
+        <img src="img/camas.jpg" alt="camas" width="220 px" height="220 px"  >
         <figcaption>Camas</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
       <figure>
-        <img src="img/collares.jpg" alt="collares" >
+        <img src="img/collares.jpg" alt="collares" width="220 px" height="220 px"  >
         <figcaption>Collares de tela</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
       <figure>
-        <img src="img/huesosgalleta.jpg" alt="Hueso" >
+        <img src="img/huesosgalleta.jpg" alt="Hueso" width="220 px" height="220 px"  >
         <figcaption>Galletas Hueso</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
       <figure>
-        <img src="img/HuesoFieltro.jpg" alt="HuesoFieltro" >
+        <img src="img/HuesoFieltro.jpg" alt="HuesoFieltro" width="220 px" height="220 px"  >
         <figcaption>HuesoFieltro</figcaption>
         <figcaption>$5000</figcaption>
       </figure>
