--- a/veterinaria_patitas/veterinaria_patitas/index.html
+++ b/veterinaria_patitas/veterinaria_patitas/index.html
@@ -129,7 +129,7 @@
                             <h3 class="card-title">Conocenos</h3>
                             <p class="card-copy">Tenemos el mejor grupo de veterinarios a disposición, para que siempre
                                 nuestros clientes estén bien atendidos. </p>
-                            <a href="#" class="card-button">Turnos disponibles</a>
+                            <a href="turnero.html" class="card-button">Turnos disponibles</a>
                         </div>
                     </div>
                     <div class="background">
