--- a/veterinaria_patitas/veterinaria_patitas/contacto.html
+++ b/veterinaria_patitas/veterinaria_patitas/contacto.html
@@ -27,9 +27,15 @@
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <header>
         <nav class="nav-hero">
             <div class="container nav-container">
@@ -51,30 +57,74 @@
 
     </header>
 
-    <Section id="pagdecontacto_comentario">
-        <form method="POST" action="enviar_datos.php" class="formulario">
+    <Section class="formulario">
+        <form method="POST" action="enviar_datos.php" class="row g-3 needs-validation" novalidate>
             <h1 id=titulo>Contáctanos</h1>
             <div class="contenedor">
-                <div class="input-contenedor"><input type="text" name="nombre_apellido" required
-                        placeholder="Nombre Completo"></div>
-                <div class="input-contenedor"><input type="email" name="correo" required size="70"
-                        placeholder="Correo electrónico"></div>
-                <div class="input-contenedor"><input type="number" name="tel" placeholder="Número de Celular"></div>
-                <div class="input-contenedor"> <select name="motivo">
-                        <option hidden>Elige un motivo</option>
+                <div class="input-contenedor"><input type="text" name="nombre_apellido" class="form-control"
+                        id="validationCustom01" required placeholder="Nombre Completo">
+                    <div class="valid-feedback"> OK!</div>
+                    <div class="invalid-feedback"> Complete datos!</div>
+                </div>
+                <div class="input-contenedor"><input type="email" name="correo" class="form-control"
+                        id="validationCustom01" required placeholder="C@rreo electrónico">
+                    <div class="valid-feedback"> OK!</div>
+                    <div class="invalid-feedback"> Complete datos!, recuerde respetar el formato "ejemplo@gmail.com"</div>
+                </div>
+
+                <div class="input-contenedor"><input type="number" name="tel" class="form-control"
+                        id="validationCustom01" required placeholder="Número de Celular">
+                    <div class="valid-feedback"> OK!</div>
+                    <div class="invalid-feedback"> Complete datos!</div>
+                </div>
+                <div class="input-contenedor"> <select name="motivo" class="form-control" id="validationCustom01"
+                        required>
+                        <option selected disabled value="">Elige un motivo</option>
                         <option value="Consulta">Consulta</option>
                         <option value="Reclamo">Reclamo</option>
                         <option value="Pedido">Pedido</option>
                         <option value="Opinion">Opinion</option>
-                    </select></div>
-                <div class="input-contenedor"><textarea name="mensaje" rows="8" required placeholder="Mensaje"
-                        style="font-family: 'Shadows Into Light', cursive" ;></textarea></div>
-                <input type="submit" value="Enviar su mensaje" class="button">
-
-
+                    </select>
+                    <div class="valid-feedback"> OK!</div>
+                    <div class="invalid-feedback"> Complete datos!</div>
+                </div>
+                <div class="input-contenedor"><textarea name="mensaje" rows="8" class="form-control"
+                        id="validationCustom01" required placeholder="Mensaje"
+                        style="font-family: 'Shadows Into Light', cursive" ;></textarea>
+                    <div class="valid-feedback"> OK!</div>
+                    <div class="invalid-feedback"> Complete datos!</div>
+                </div>
+                <!--nuevas etiquetas input type="submit" value="Enviar su mensaje" class="button">-->
+                <input type="submit" value="Enviar Mensaje" class="button">
+                <!--<button class="btn btn-primary" type="submit">Enviar Mensaje</button>-->
             </div>
+
+
         </form>
     </Section>
+
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (function () {
+            'use strict'
+
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.querySelectorAll('.needs-validation')
+
+            // Loop over them and prevent submission
+            Array.prototype.slice.call(forms)
+                .forEach(function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (!form.checkValidity()) {
+                            event.preventDefault()
+                            event.stopPropagation()
+                        }
+
+                        form.classList.add('was-validated')
+                    }, false)
+                })
+        })()
+    </script>
 
     <br>
 
@@ -105,7 +155,8 @@
             </div>
             <div class=" item-contact">
                 <i class='bx bx-mail-send contact-icon'></i>
-                <h5 class="contact-title"><a href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio" ">veterinaria.patitas@gmail.com</a>
+                <h5 class="contact-title"><a
+                        href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio" ">veterinaria.patitas@gmail.com</a>
                 </h5>
             </div>
             <div class=" item-contact">
