--- a/veterinaria_patitas/veterinaria_patitas/productos.html
+++ b/veterinaria_patitas/veterinaria_patitas/productos.html
@@ -12,6 +12,7 @@
   <link rel="icon" href="img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--nuevas etiquetas-->
   <meta name="description" content="Web para mostrar los productos de una veterinaria" />
