--- a/veterinaria_patitas/veterinaria_patitas/contacto.html
+++ b/veterinaria_patitas/veterinaria_patitas/contacto.html
@@ -26,8 +26,12 @@
     <link rel="stylesheet" type="text/css" href="css/contacto.css" />
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--carrousel--->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
+    <link rel="stylesheet" type="text/css" href="css/contacto.css" />
 </head>
 
 <body>
@@ -55,6 +59,58 @@
 
     </header>
 
+    <div class="carousel">
+        <div class="carousel__contenedor">
+            <button aria-label="Anterior" class="carousel__anterior">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+
+
+            <div class="carousel__lista">
+                <div class="carousel__elemento">
+                    <img src="img/3.jpg" alt="Felinos Amigos">
+                    <p> </p>
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/2.jpg" alt="De Compras">
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/4.jpg" alt="Grupo de perros">
+                    <p> </p>
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/1.jpg" alt="Saludo canino">
+                    <p></p>
+                </div>
+
+                <div class="carousel__elemento">
+                    <img src="img/6.jpg" alt="Hola Doctor">
+                    <p> </p>
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/7.jpg" alt="Perro acostado">
+                    <p></p>
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/8.jpg" alt="Perro y niño">
+                    <p></p>
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/9.jpg" alt="Perro y veterinario">
+                    <p></p>
+                </div>
+
+            </div>
+
+            <button aria-label="Siguiente" class="carousel__siguiente">
+
+                <i class="fas fa-chevron-right"></i>
+            </button>
+        </div>
+
+        <div role="tablist" class="carousel__indicadores"></div>
+    </div>
+
     <Section class="formulario">
         <form method="POST" action="enviar_datos.php" class="row g-3 needs-validation" novalidate>
             <h1 id=titulo>Contáctanos</h1>
@@ -67,7 +123,8 @@
                 <div class="input-contenedor"><input type="email" name="correo" class="form-control"
                         id="validationCustom01" required placeholder="C@rreo electrónico">
                     <div class="valid-feedback"> OK!</div>
-                    <div class="invalid-feedback"> Complete datos!, recuerde respetar el formato "ejemplo@gmail.com"</div>
+                    <div class="invalid-feedback"> Complete datos!, recuerde respetar el formato "ejemplo@gmail.com"
+                    </div>
                 </div>
 
                 <div class="input-contenedor"><input type="number" name="tel" class="form-control"
@@ -166,6 +223,10 @@
         </div>
 
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+    <script src="js/funcionesGrupo5.js"></script>
 </body>
 
 </html>
