--- a/veterinaria_patitas/veterinaria_patitas/registro.html
+++ b/veterinaria_patitas/veterinaria_patitas/registro.html
@@ -26,7 +26,10 @@
     <meta name="author" content="Priscilla Arianna MINGORANCE, Romina Gisela MOLINA, Lourdes MONTI LELOUTRE" />
     <meta name="copyright" content="Priscilla Arianna MINGORANCE, Romina Gisela MOLINA, Lourdes MONTI LELOUTRE" />
 
-
+ <!--carrousel--->
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
+ <link rel="stylesheet" type="text/css" href="css/contacto.css" />
 
 </head>
 
@@ -50,7 +53,57 @@
             </div>
         </nav>
     </header>
-        
+    <div class="carousel">
+        <div class="carousel__contenedor">
+            <button aria-label="Anterior" class="carousel__anterior">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+
+
+            <div class="carousel__lista">
+                <div class="carousel__elemento">
+                    <img src="img/3.jpg" alt="Felinos Amigos">
+                    <p> </p>
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/2.jpg" alt="De Compras">
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/4.jpg" alt="Grupo de perros">
+                    <p> </p>
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/1.jpg" alt="Saludo canino">
+                    <p></p>
+                </div>
+
+                <div class="carousel__elemento">
+                    <img src="img/6.jpg" alt="Hola Doctor">
+                    <p> </p>
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/7.jpg" alt="Perro acostado">
+                    <p></p>
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/8.jpg" alt="Perro y niño">
+                    <p></p>
+                </div>
+                <div class="carousel__elemento">
+                    <img src="img/9.jpg" alt="Perro y veterinario">
+                    <p></p>
+                </div>
+
+            </div>
+
+            <button aria-label="Siguiente" class="carousel__siguiente">
+
+                <i class="fas fa-chevron-right"></i>
+            </button>
+        </div>
+
+        <div role="tablist" class="carousel__indicadores"></div>
+    </div>
         <Section class="formulario">
             <form method="POST" action="enviar_datos.php" class="row g-3 needs-validation" novalidate>
                 <h1 class=titulo>Registrate</h1>
@@ -191,6 +244,10 @@
         </div>
         
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+    <script src="js/funcionesGrupo5.js"></script>
 </body>
 
 </html>
