Actualizacion de carousel y doc IEEE830

--- a/veterinaria_patitas/veterinaria_patitas/contacto.html
+++ b/veterinaria_patitas/veterinaria_patitas/contacto.html
@@ -59,6 +59,8 @@
 
     </header>
 
+    <!--carrousel--->
+
     <div class="carousel">
         <div class="carousel__contenedor">
             <button aria-label="Anterior" class="carousel__anterior">
@@ -107,7 +109,7 @@
                 <i class="fas fa-chevron-right"></i>
             </button>
         </div>
-
+        <p> "No sabemos nada del amor si no queremos a los animales" (Fred Wander)</p>
         <div role="tablist" class="carousel__indicadores"></div>
     </div>
 
