--- a/veterinaria_patitas/veterinaria_patitas/registro.html
+++ b/veterinaria_patitas/veterinaria_patitas/registro.html
@@ -53,13 +53,13 @@
             </div>
         </nav>
     </header>
+
+       <!--carrousel--->
     <div class="carousel">
         <div class="carousel__contenedor">
             <button aria-label="Anterior" class="carousel__anterior">
                 <i class="fas fa-chevron-left"></i>
             </button>
-
-
             <div class="carousel__lista">
                 <div class="carousel__elemento">
                     <img src="img/3.jpg" alt="Felinos Amigos">
@@ -101,9 +101,11 @@
                 <i class="fas fa-chevron-right"></i>
             </button>
         </div>
-
+        <p> "No sabemos nada del amor si no queremos a los animales" (Fred Wander)</p>
         <div role="tablist" class="carousel__indicadores"></div>
+        
     </div>
+
         <Section class="formulario">
             <form method="POST" action="enviar_datos.php" class="row g-3 needs-validation" novalidate>
                 <h1 class=titulo>Registrate</h1>
