--- a/veterinaria_patitas/veterinaria_patitas/index.html
+++ b/veterinaria_patitas/veterinaria_patitas/index.html
@@ -27,12 +27,20 @@
 </head>
 
 <body>
-    <!--Menú de navegacion-->
+    <!--JS-->
+    <script>
+        /*var log= document.getElementById("logo1");*/
+        function miFuncion(){
+            alert('Opcion no disponible');
+        ;
+    }
+    </script>
+<!--Menú de navegacion-->
     <header class="hero">
         <nav class="nav-hero">
             <div class="container nav-container">
                 <div class="logo">
-                    <h2 class="logo-name"> Veterinaria Patitas </h2>
+                    <h2 id= "logo1" class="logo-name" onclick="miFuncion();"> Veterinaria Patitas </h2>
                 </div>
                 <div class="links">
                     <a href="index.html" class="link">Inicio</a>
@@ -54,7 +62,7 @@
                 <p class="copy">Nos encargamos del cuidado con mucho amor.</p><br>
                 <a href="registro.html" class="cta">Registrarse</a>
             </div>
-            <img src="img/logo.jpeg" alt="logo-patitas" class="img1">
+            <img src="img/logo.jpeg" alt="logo-patitas" class="img1" onclick="miFuncion();">
         </section>
     </header>
 
