--- a/veterinaria_patitas/veterinaria_patitas/productos.html
+++ b/veterinaria_patitas/veterinaria_patitas/productos.html
@@ -52,13 +52,13 @@
       </div>
     </nav>
     <br>
-    <h1 id=titulo>Productos</h1>
+    <h1 class="titulo">Productos</h1>
     
   </header>
 
   <section id=seccion>
 
-    <article>
+    <article class="fot">
       <figure>
         <img src="img/collargoma.jpg" alt="collargoma" width="220 px" height="220 px" >
         <figcaption>Collares de goma</figcaption>
