--- a/veterinaria_patitas/veterinaria_patitas/login.html
+++ b/veterinaria_patitas/veterinaria_patitas/login.html
@@ -55,7 +55,7 @@
                     <div class=" valid-feedback"> OK!</div>
                     <div class="invalid-feedback"> Complete datos!, recuerde respetar el formato "ejemplo@gmail.com"
                     </div>
-                    <div class="input-contenedor"><input type="password" name="contraseña" class="form-control"
+                    <div class="input-contenedor"><input type="password" name="contrasena" class="form-control"
                             id="validationCustom01" placeholder="Contraseña" required pattern="[A-Za-z0-9]{6,10}"
                             title="">
                         <div class="valid-feedback"> OK!</div>
