--- a/veterinaria_patitas/veterinaria_patitas/index.html
+++ b/veterinaria_patitas/veterinaria_patitas/index.html
@@ -27,14 +27,8 @@
 </head>
 
 <body>
-    <!--JS-->
-    <script>
-        /*var log= document.getElementById("logo1");*/
-        function miFuncion(){
-            alert('Opcion no disponible');
-        ;
-    }
-    </script>
+   
+ 
 <!--Menú de navegacion-->
     <header class="hero">
         <nav class="nav-hero">
@@ -62,7 +56,7 @@
                 <p class="copy">Nos encargamos del cuidado con mucho amor.</p><br>
                 <a href="registro.html" class="cta">Registrarse</a>
             </div>
-            <img src="img/logo.jpeg" alt="logo-patitas" class="img1" onclick="miFuncion();">
+            <img src="img/logo.jpeg" alt="logo-patitas" class="img1" onclick="miFuncion();" onmouseover="bigImg(this)" onmouseout="normalImg(this)";">
         </section>
     </header>
 
@@ -225,7 +219,8 @@
                 
         </div>
     </footer>
-
+	 <!--JS-->
+<script src="js/funcionesGrupo5.js"></script>
 </body>
 
 </html>
