--- a/veterinaria_patitas/veterinaria_patitas/productos.html
+++ b/veterinaria_patitas/veterinaria_patitas/productos.html
@@ -5,11 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Veterinaria Patitas - Productos</title>
-  <script>
-    function miMensaje() {
-    alert("Agregaste el producto a tu carrito");
-  }
-  </script>
+ 
 
   <link href="css/productos.css" rel="stylesheet" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -144,7 +140,7 @@
       </div>
     </div>
   </footer>
-
+<script src="js/funcionesGrupo5.js"></script>
 </body>
 
 </html>
