nueva funcion de alert y actualizacion de docx

--- a/veterinaria_patitas/veterinaria_patitas/contacto.html
+++ b/veterinaria_patitas/veterinaria_patitas/contacto.html
@@ -156,7 +156,7 @@
                     <div class="invalid-feedback"> Complete los datos, Tamaño mínimo: 5 caracteres. Tamaño máximo: 300 caracteres.</div>
                 </div>
                 <!--nuevas etiquetas input type="submit" value="Enviar su mensaje" class="button">-->
-                <input type="submit" value="Enviar Mensaje" class="button">
+                <input type="submit" value="Enviar Mensaje" class="button" onclick="alerta()">
                <!--<                button class="btn btn-primary" type="submit">Enviar Mensaje</button>-->
             </div>
 
