actualizacion de iconos

--- a/veterinaria_patitas/veterinaria_patitas/index.html
+++ b/veterinaria_patitas/veterinaria_patitas/index.html
@@ -155,11 +155,11 @@
                 <h3 class="title-footer">Descarga nuestra App</h3>
                 <div class="download-app">
                     <div class="download-item">
-                        <i class='bx bxl-apple download-logo'></i>
+                         <a href="https://www.apple.com/la/app-store/" target="_blanck" ><i class='bx bxl-apple download-logo'></i></a>
                         <h4 class="download-title">App Store</h4>
                     </div>
                     <div class="download-item">
-                        <i class='bx bxl-play-store download-logo'></i>
+                        <a href="https://play.google.com/store?hl=es_AR&gl=US" target="_blanck" > <i class='bx bxl-play-store download-logo'> </i></a>
                         <h4 class="download-title">Play Store</h4>
                     </div>
                 </div>
@@ -170,9 +170,9 @@
             <section class="socialmedia">
                 <div class="redes">
                     <p class="redes-sociales">Seguinos en nuestras redes:</p>
-                    <i class='redes-icon bx bxl-facebook-circle'></i>
-                    <i class='redes-icon bx bxl-twitter'></i>
-                    <i class='redes-icon bx bxl-instagram-alt'></i>
+                    <a href="https://www.facebook.com/patitasveterinaria/" target="_blanck" > <i class='redes-icon bx bxl-facebook-circle'></i></a>
+                    <a href="https://twitter.com/cvpatitaspy" target="_blanck" >  <i class='redes-icon bx bxl-twitter'></i></i></a>
+                    <a href="https://www.instagram.com/vetepatitas/?hl=es-la" target="_blanck" > <i class='redes-icon bx bxl-instagram-alt'></i></a>
                 </div>
              
             </section>
