--- a/veterinaria_patitas/veterinaria_patitas/turnero.html
+++ b/veterinaria_patitas/veterinaria_patitas/turnero.html
@@ -53,7 +53,7 @@
                 <p class="copy">Nos encargamos del cuidado con mucho amor.</p><br>
                 <a href="registro.html" class="cta">Registrarse</a>
             </div>
-            <img src="img/construccion.png" alt="construcciones" class="img2" width="700 px" >
+            <img src="img/construccion.png" alt="construcciones" class="img2" width="100%" height="95%" >
         </section>
     </header>
 
@@ -81,9 +81,9 @@
             <section class="socialmedia">
                 <div class="redes">
                     <p class="redes-sociales">Seguinos en nuestras redes:</p>
-                    <i class='redes-icon bx bxl-facebook-circle'></i>
-                    <i class='redes-icon bx bxl-twitter'></i>
-                    <i class='redes-icon bx bxl-instagram-alt'></i>
+                    <a href="https://www.facebook.com/patitasveterinaria/" target="_blanck" > <i class='redes-icon bx bxl-facebook-circle'></i></a>
+                    <a href="https://twitter.com/cvpatitaspy" target="_blanck" >  <i class='redes-icon bx bxl-twitter'></i></i></a>
+                    <a href="https://www.instagram.com/vetepatitas/?hl=es-la" target="_blanck" > <i class='redes-icon bx bxl-instagram-alt'></i></a>
                 </div>
              
             </section>
