validacion  de edad en pagina registro

--- a/veterinaria_patitas/veterinaria_patitas/contacto.html
+++ b/veterinaria_patitas/veterinaria_patitas/contacto.html
@@ -194,7 +194,7 @@
             <div class=" item-contact">
                 <i class='bx bx-mail-send contact-icon'></i>
                 <h5 class="contact-title"><a
-                        href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio" ">veterinaria.patitas@gmail.com</a>
+                        href="mailto:veterinaria.patitas@gmail.com?Subject=Interesado%20en%20su%20servicio">veterinaria.patitas@gmail.com</a>
                 </h5>
             </div>
             <div class=" item-contact">
